feat: Implement Paging 3 for image loading and integrate Hilt
- Added Hilt for dependency injection.
- Created `PinterestDemoApp` Application class annotated with `@HiltAndroidApp`.
- Created `AppModule` to provide dependencies like Retrofit, ApiService, Repositories, and UseCases.
- Integrated Hilt into `MainActivity` and `HomeViewModel`.
- Refactored `HomeViewModel` to use `PagingData` Flow for images, replacing `UiState`.
- Implemented `ImagePagingSource` to load images paginated from the API.
- Updated `ImageRepository` and `GetImagesUseCase` to support Paging 3.
- Modified `HomeScreen` to use `LazyPagingItems` and handle Paging 3 load states (refresh, append, error).
- Added shimmer placeholder for loading image items in `ImageCard` and when `LazyPagingItems` are null.
- Used `SubcomposeAsyncImage` in `ImageCard` for custom loading state.
- Added `accompanist-placeholder-material` for shimmer effect.
- Updated Gradle dependencies for Paging, Hilt, and Accompanist.
- Added Hilt plugin to project and app `build.gradle.kts`.
- Set application name in `AndroidManifest.xml`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 agp = "8.12.0"
 converterMoshi = "3.0.0"  # Updated to stable version
+hiltCompiler = "2.57"
+hiltNavigationCompose = "1.2.0"
 kotlin = "2.2.10"
 coreKtx = "1.17.0"
 junit = "4.13.2"
@@ -14,13 +16,20 @@ lifecycleViewmodelCompose = "2.9.2"
 coilCompose = "2.7.0"
 accompanistSystemuicontroller = "0.36.0"
 moshiKotlin = "1.15.2"
+pagingRuntime = "3.3.6"
 retrofit = "3.0.0"  # Updated to stable version
 kotlinxCoroutinesAndroid = "1.10.2"
 okhttp = "5.1.0" # Or the latest version of OkHttp
 
 [libraries]
+accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistSystemuicontroller" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingRuntime" }
+androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltCompiler" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -47,3 +56,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "kotlin-parcelize"}
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltCompiler" }
