feat: Implement detail screen and navigation
- Added navigation between `HomeScreen` and a new `DetailScreen`.
- Implemented `DetailScreen` to display image details, including image, author, dimensions, and a clickable download URL.
- Created `DetailViewModel` to fetch and manage image details using `GetImageByIdUseCase`.
- Introduced `AppViewModel` to manage shared UI state, particularly for the `TopAppBar`.
- Created `TopAppBarConfig` data class to define the state of the `TopAppBar`.
- Implemented `AppScaffold` with a configurable `TopAppBar` driven by `AppViewModel`.
- Updated `HomeScreen` to use `AppViewModel` for `TopAppBar` configuration and navigate to `DetailScreen` on image click.
- Added `GetImageByIdUseCase` to fetch a single image by ID.
- Updated `ImageRepository` and `ApiService` to support fetching an image by ID.
- Changed `ApiService` base URL to `https://picsum.photos/`.
- Refactored `ImageCard` to `ImageCardM3` using Material 3 Card.
- Integrated Material 3 components (`CircularProgressIndicator`, `Button`, `Text`, `TopAppBar`, `Card`) in `HomeScreen` and `DetailScreen`.
- Added navigation dependencies (`androidx.navigation.compose`).
- Added Material 3 dependency (`androidx.compose.material3`).
- Updated Android Gradle Plugin version.
- Organized files into feature-specific packages (app, home, detail, navigation).
- Introduced `UiState` sealed class for managing UI states in `DetailViewModel`.
- Added `NavArgs` object for navigation argument keys.
- Renamed `com.vsay.pintereststylegriddemo.presentation.viewmodel.HomeViewModel` to `com.vsay.pintereststylegriddemo.presentation.home.viewmodel.HomeViewModel`.
- Renamed `com.vsay.pintereststylegriddemo.presentation.ui.HomeScreen.kt` to `com.vsay.pintereststylegriddemo.presentation.home.ui.HomeScreen.kt`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.12.0"
+agp = "8.12.1"
 converterMoshi = "3.0.0"  # Updated to stable version
 hiltCompiler = "2.57"
 hiltNavigationCompose = "1.2.0"
@@ -20,6 +20,8 @@ pagingRuntime = "3.3.6"
 retrofit = "3.0.0"  # Updated to stable version
 kotlinxCoroutinesAndroid = "1.10.2"
 okhttp = "5.1.0" # Or the latest version of OkHttp
+navigationCompose = "2.9.3"
+material3 = "1.3.2"
 
 [libraries]
 accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistSystemuicontroller" }
@@ -50,6 +52,9 @@ retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.r
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-loggingInterceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
+
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
