refactor: Modularize Bookmark feature and introduce convention plugin
- Created `feature-bookmarks` module for the Bookmark feature.
  - Moved `BookmarkScreen.kt` and `BookmarkNavGraph.kt` (now `bookmarkNavGraph()`) to this module.
  - Added `AndroidManifest.xml`, `proguard-rules.pro`, `consumer-rules.pro`, and string resources for the new module.
- Introduced `AndroidLibraryConventionPlugin` in `convention-plugins`.
  - This plugin centralizes common Android library configurations (SDK versions, Proguard, build types, Kotlin options, Compose options, common dependencies) and is applied to the `feature-bookmarks` module.
  - Updated `convention-plugins/build.gradle.kts` and `convention-plugins/settings.gradle.kts`.
- Updated version catalog (`gradle/libs.versions.toml`):
  - Added versions for `compileSdk`, `minSdk`, `jvmTarget`, `java`, `composeCompiler`.
  - Added `android-library` plugin alias.
- Modified `app` module:
  - Added `feature-bookmarks` as a project dependency in `app/build.gradle.kts`.
  - Removed old `BookmarkScreen.kt` and `BookmarkNavGraph.kt` from the `app` module.
  - Updated `AppNavHost.kt` to use the new `bookmarkNavGraph()` from the feature module.
  - Updated `AppWithTopBar.kt`:
    - Manages `TopAppBar` configuration based on the current route, including the new `BookmarkScreen` from the feature module.
    - `NavigationBarItem` for Bookmark now navigates to `BOOKMARKS_GRAPH_ROUTE`.
    - `LaunchedEffect` updates `TopAppBarConfig` in `AppViewModel` based on current route.
- Updated `settings.gradle.kts` to include `feature-bookmarks` module and `convention-plugins` build.
- Updated root `build.gradle.kts` to include `android-library` plugin.
- Enhanced `.gitignore` to cover module-specific build folders and common Android Studio files.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,20 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
+
+# Root build folder
 /build
+
+# Module-specific build folders
+/app/build
+/feature-bookmarks/build
+/convention-plugins/build
+
+# Captures and other generated files
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+
+# IntelliJ / Android Studio
+.idea/
