--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,12 @@ kotlinxCoroutinesAndroid = "1.10.2"
 okhttp = "5.1.0" # Or the latest version of OkHttp
 navigationCompose = "2.9.3"
 material3 = "1.3.2"
+# Ensure this line exists and has your desired compile SDK version
+compileSdk = "36"
+minSdk = "24" # Example
+jvmTarget = "8" # Example
+java = "1.8"
+composeCompiler = "1.5.3" # Example, check for compatibility
 
 [libraries]
 accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistSystemuicontroller" }
@@ -62,3 +68,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-parcelize = { id = "kotlin-parcelize"}
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltCompiler" }
+android-library = { id = "com.android.library", version.ref = "agp" }
