refactor: Modularize project and introduce core modules
- Introduced `core-data`, `core-domain`, `core-ui`, `core-common`, and `core-navigation` modules.
- Moved domain layer components (`Image` model, `ImageRepository` interface, `GetImagesUseCase`, `GetImageByIdUseCase`) from the `app` module to the new `core-domain` module.
- Updated import paths across the `app` module to reflect the new location of domain components.
- Modified `ImageRepository` in `core-domain` to return `Flow<PagingData<Image>>` from `getPagedImages()`.
- Updated `ImageRepositoryImpl` in the `app` module to conform to the `Flow` return type change and ensure `Image` type refers to `core.domain.model.Image`.
- Updated `GetImagesUseCase` in `core-domain` to reflect the `Flow` return type from the repository.
- Removed `@Inject` from `GetImageByIdUseCase` constructor in `core-domain` as it's now a plain Kotlin module. Hilt injection is handled in the `app` module.
- Added `androidx-paging-common` dependency to `libs.versions.toml` and `core-domain/build.gradle.kts`.
- Created `KotlinLibraryConventionPlugin` for common Kotlin module setup (Kotlin JVM, toolchain, coroutines).
- Updated `AndroidLibraryConventionPlugin` package name.
- Registered `KotlinLibraryConventionPlugin` in `convention-plugins/build.gradle.kts`.
- Applied convention plugins to new core modules (`core-domain`, `core-common`, `core-navigation` use Kotlin plugin; `core-ui` uses Android library plugin).
- Added `core-domain` as an implementation dependency to the `app` module.
- Added module includes for the new core modules in `settings.gradle.kts`.
- Created basic scaffolding for `core-data`, `core-ui`, `core-common`, and `core-navigation` modules, including `build.gradle.kts` files, AndroidManifests (for Android library modules), and placeholder test files.
- Ensured `ImagePagingSource` and `ImageMapper` in the `app.data` layer now use/map to the `Image` model from `core-domain`.
- Updated `AppModule` in the `app` module to pr

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingRuntime" }
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
+androidx-paging-common = { module = "androidx.paging:paging-common", version.ref = "pagingRuntime" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltCompiler" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
