--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-agp = "8.12.1"
+agp = "8.12.2"
 converterMoshi = "3.0.0"  # Updated to stable version
-hiltCompiler = "2.57"
+hiltCompiler = "2.57.1"
 hiltNavigationCompose = "1.2.0"
 kotlin = "2.2.10"
 coreKtx = "1.17.0"
@@ -9,10 +9,10 @@ junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
-material = "1.12.0"
+material = "1.13.0"
 composeUi = "1.9.0"
 activityCompose = "1.10.1"
-lifecycleViewmodelCompose = "2.9.2"
+lifecycleViewmodelCompose = "2.9.3"
 coilCompose = "2.7.0"
 accompanistSystemuicontroller = "0.36.0"
 moshiKotlin = "1.15.2"
@@ -25,9 +25,9 @@ material3 = "1.3.2"
 # Ensure this line exists and has your desired compile SDK version
 compileSdk = "36"
 minSdk = "24" # Example
-jvmTarget = "8" # Example
-java = "1.8"
-composeCompiler = "1.5.3" # Example, check for compatibility
+jvmTarget = "11" # Example
+java = "11"
+composeCompiler = "1.5.14"
 
 [libraries]
 accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanistSystemuicontroller" }
