Refactor: Centralize navigation routes in `core-navigation`
- Introduced `AppRoutes.kt` in `core-navigation` module to define shared navigation route constants (`BOOKMARKS_GRAPH_ROUTE`, `BOOKMARK_SCREEN_ROUTE`).
- Updated `feature-bookmarks` and `app` modules to use these constants from `core-navigation`.
  - `feature-bookmarks/src/main/java/com/vsay/pintereststylegriddemo/feature_bookmarks/ui/BookmarkNavGraph.kt` now imports routes from `core-navigation`.
  - `app/src/main/java/com/vsay/pintereststylegriddemo/ui/AppWithTopBar.kt` now imports routes from `core-navigation`.
- Added `core-navigation` as a dependency to `feature-bookmarks` and `app` modules.
- Added `androidx.navigation.common` dependency to `feature-bookmarks` for Java compatibility and to `libs.versions.toml`.
- Updated `core-navigation/build.gradle.kts` by removing commented-out dependency examples.
- Updated `.gitignore` to include build folders for all core modules.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@
 /app/build
 /feature-bookmarks/build
 /convention-plugins/build
+/core-common/build
+/core-data/build
+/core-domain/build
+/core-navigation/build
+/core-ui/build
+
 
 # Captures and other generated files
 /captures
@@ -25,6 +31,3 @@ local.properties
 
 # IntelliJ / Android Studio
 .idea/
-
-# Core domain
-/core-domain/build
