Refactor: Modularize Home screen and introduce platform utils
- Moved `HomeScreen.kt` and `HomeViewModel.kt` to the new `feature-home` module.
    - Updated package names and import paths accordingly.
    - `HomeScreen` now takes an `onShowTopAppBar` callback and `smallIconResId` for notifications.
- Created `core-platform-utils` module:
    - Moved `NotificationHelper.kt` to this module from `app.common.notification`.
        - `NotificationHelper` now takes `smallIconResId` for notification icon.
        - String resources for notifications moved to this module.
    - Added placeholder files and `build.gradle.kts`.
- Created `core-ui` module:
    - Moved `TopAppBarConfig.kt` (formerly `TopAppBarState.kt`) and `NavigationIconType.kt` from the `app` module.
    - Added `PermissionHandler.kt` for managing runtime permissions.
    - Added common string resources.
- Updated `app` module:
    - `AppNavHost.kt`: `HomeScreen` composable updated to pass `appViewModel::showTopAppBar` and launcher icon.
    - `app/build.gradle.kts` now depends on `core-ui` and `feature-home`.
    - Imports for `TopAppBarConfig` and `NavigationIconType` updated to `core-ui`.
- Updated `feature-home`:
    - `build.gradle.kts` now depends on `core-platform-utils`.
    - `HomeScreen.kt` now uses `NotificationHelper` from `core-platform-utils` and `rememberPermissionHandler` from `core-ui`.
    - String resources for notification titles/text moved to `feature-home/res/values/strings.xml`.
- Updated `feature-bookmarks`:
    - Renamed package for `BookmarkNavGraph.kt` and `BookmarkScreen.kt` from `feature_bookmarks.ui` to `ui`.
- Created placeholder feature modules: `feature-detail`, `feature-profile`, `feature-changepassword`, `feature-accountsettingoverview` with basic scaffolding.
- Updated `settings.gradle.kts` to include `core-platform-utils`.
- Updated `.gitignore` to include build folders for new feature modules.
- Updated various import paths in `ProfileScreen`, `ChangePasswordScreen`, `Acc

--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,22 @@
 
 # Module-specific build folders
 /app/build
-/feature-bookmarks/build
 /convention-plugins/build
+
+# Core Modules
 /core-common/build
 /core-data/build
 /core-domain/build
 /core-navigation/build
 /core-ui/build
+
+# Feature Modules
+/feature-bookmarks/build
+/feature-home/build
+/feature-detail/build
+/feature-profile/build
+/feature-changepassword/build
+/feature-accountsettingoverview/build
 
 
 # Captures and other generated files
