Refactor: Modularize Detail feature and upgrade to Material 3
- Created `feature-detail` module for the image detail screen.
  - Moved `DetailScreen.kt` and `DetailViewModel.kt` from `app` to `feature-detail`.
    - Package names updated to `com.vsay.pintereststylegriddemo.feature_detail.*`.
    - `DetailScreen` now accepts an `onShowTopAppBar` lambda instead of `AppViewModel`.
    - `DetailViewModel` now uses `AppRoutes.Main.Detail.ARG_IMAGE_ID` for SavedStateHandle.
  - Added `detailNavGraph.kt` in `feature-detail` to define its navigation.
  - Removed placeholder files from `feature-detail`.
- Migrated theme from Material Components 2 to Material 3.
  - Updated `Theme.kt`, `Color.kt`, `Shape.kt`, `Type.kt` to use Material 3 components and color roles.
  - These theme files were moved from `app/src/main/java/.../ui/theme` to `core-ui/src/main/java/.../theme`.
  - Updated XML themes in `app/src/main/res/values/themes.xml` and `app/src/main/res/values-night/themes.xml` to inherit from Material 3 themes.
- Updated module dependencies:
  - `app` module now implements `feature-detail`.
  - `feature-bookmarks` now implements `core-ui`.
  - `AndroidLibraryConventionPlugin` now includes common UI dependencies like Coil and Accompanist.
- Navigation updates:
  - `MainAppNavGraph.kt` in `app` now uses `detailNavGraph()` from `feature-detail`.
  - Removed `NavArgs.kt` from `core-navigation` (constants moved to `AppRoutes`).
- UI and Resource updates:
  - `ProfileScreen.kt`, `AppWithTopBar.kt`, `BottomNavItem.kt` updated to use string resources from `core-ui` (e.g., `CoreUiR.string.*`).
  - `AppWithTopBar.kt` now conditionally shows/hides the bottom navigation bar based on the current route, especially for profile nested screens and detail screen.
  - `AccountSettingOverviewScreen.kt`: "Manage Notifications" button navigation temporarily removed.
  - Deleted `app/src/main/res/values/strings.xml` (strings likely moved to feature modules or `core-ui`).
  - Deleted `app/src/main

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,6 @@ junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 appcompat = "1.7.1"
-material = "1.13.0"
 composeUi = "1.9.0"
 activityCompose = "1.10.1"
 lifecycleViewmodelCompose = "2.9.3"
@@ -21,6 +20,7 @@ retrofit = "3.0.0"  # Updated to stable version
 kotlinxCoroutinesAndroid = "1.10.2"
 okhttp = "5.1.0" # Or the latest version of OkHttp
 navigationCompose = "2.9.3"
+googleMaterial = "1.12.0"
 material3 = "1.3.2"
 # Ensure this line exists and has your desired compile SDK version
 compileSdk = "36"
@@ -45,10 +45,8 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesAndroid" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "composeUi" }
-androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "composeUi" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "composeUi" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "composeUi" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -63,6 +61,7 @@ okhttp-loggingInterceptor = { group = "com.squareup.okhttp3", name = "logging-in
 
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-navigation-common-ktx = { group = "androidx.navigation", name = "navigation-common-ktx", version.ref = "navigationCompose" } # Added this line
+google-material = { group = "com.google.android.material", name = "material", version.ref = "googleMaterial" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 
 [plugins]
